--- a/lessions/index.html
+++ b/lessions/index.html
@@ -6,6 +6,6 @@
     <title>Index</title>
   </head>
   <body>
-   <script src="js/firstClass.js"></script> 
+   <script src="js/secondClass.js"></script> 
   </body>
 </html>
