--- a/06-proyect/37-dateManagement/index.html
+++ b/06-proyect/37-dateManagement/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Clase 36 - Var, let y const: las diferencias entre ellos</title>
+    <title>Manejo de fechas</title>
   </head>
   <body>
     <script src="./script.js"></script>
